The frame model depends on the span attribute, so changing span should reconstruct frames.  Bug 403249, r=bernd, sr=roc